--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 <body>
     <main>
         <header>
-            <h2><i class="fa-solid fa-cloud-sun-rain"></i> Astrophoto Spots in Tirol</h2>
+            <h2><i class="fa-solid fa-cloud-sun-rain"></i> Wetterstationen Euregio Beispiel</h2>
             <nav>
                 <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-euregio">Github</a>
             </nav>
         </header>
         <article>
             <div id="map"></div>
+            <h1><a href=""></a>Übersicht die 4 beste Spots</h1>
+            <p>Tirol bietet aufgrund seiner lage super spots zum fotographiern....</p>
         </article>
         <footer>
             <strong>Datenquellen:</strong>
