--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <main>
         <header>
-            <h2><i class="fa-solid fa-cloud-sun-rain"></i> Wetterstationen Euregio Beispiel</h2>
+            <h2><i class="fa-solid fa-cloud-sun-rain"></i> Astro Photospots in Tirol</h2>
             <nav>
                 <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-euregio">Github</a>
             </nav>
