--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </header>
         <article>
             <div id="map"></div>
-            <h1><a href=""></a>Übersicht die 4 beste Spots</h1>
-            <p>Tirol bietet aufgrund seiner lage super spots zum fotographiern....</p>
+            <h1><a href=""></a>Die vier besten Spots für Astrophotgraphie</h1>
+            <p>Tirol bietet aufgrund der gerignen Lichtverschmutzung in den Bergen ideale Vorrausetzungen für die Astrophototgaphie</p>
         </article>
         <footer>
             <strong>Datenquellen:</strong>
