links und hintergrund

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Wetterstationen Euregio Beispiel</title>
+    <title>Astrophoto Spots Tirol</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,9 +40,9 @@
 <body>
     <main>
         <header>
-            <h2><i class="fa-solid fa-cloud-sun-rain"></i> Astro Photospots in Tirol</h2>
+            <h2><i class="fa-solid fa-camera-retro"></i> Astro Photospots in Tirol</h2>
             <nav>
-                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/aws-euregio">Github</a>
+                <i class="fab fa-github"></i> <a href="https://github.com/astrophotoTirol">Github</a>
             </nav>
         </header>
         <article>
