--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
     <!--Leaflet Rainviewer-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mwasil/Leaflet.Rainviewer/leaflet.rainviewer.css"/>
     <script src="https://cdn.jsdelivr.net/gh/mwasil/Leaflet.Rainviewer/leaflet.rainviewer.js"></script>
-    
-    <!-- Leaflet Velocity -->
-    <link rel="stylesheet" href="lib/leaflet-velocity.css">
-    <script src="lib/leaflet-velocity.js"></script>
+
+    <!--Minimap-->
+    <script src="https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@1.0.0/dist/Control.WorldMiniMap.js" integrity="sha512-PFw8St3qenU1/dmwCfiYYN/bRcqY1p3+sBATR+rZ6622eyXOk/8izVtlmm/k8qW7KbRIJsku838WCV5LMs6FCg==" crossorigin=""></script>
+
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
-    
-    <!--COLORS-->
-    <script src = "colors.js" ></script>
+
 </head>
 
 <body>
