--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <!--Minimap-->
     <script src="https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@1.0.0/dist/Control.WorldMiniMap.js" integrity="sha512-PFw8St3qenU1/dmwCfiYYN/bRcqY1p3+sBATR+rZ6622eyXOk/8izVtlmm/k8qW7KbRIJsku838WCV5LMs6FCg==" crossorigin=""></script>
 
+    <!--Zomify-->
+    <script src="src/L.TileLayer.Zoomify.js"></script>
+   
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
@@ -62,6 +65,9 @@
                 Egal, ob du ein erfahrener Astrofotograf bist oder gerade erst in diese faszinierende Welt eintauchst, die Tiroler Alpen bieten dir die idealen Bedingungen, um dein Handwerk zu perfektionieren und unvergessliche Aufnahmen des Nachthimmels zu machen. Nutze diese einzigartige Gelegenheit, um die Wunder des Universums in einer der beeindruckendsten Bergregionen Europas zu erfassen und zu teilen. Tirol ist zweifellos ein Paradies für Astrofotografen!
             Wir geben Dir die Lichvermutzungskarte sowie Wetterdaten an die Hand damit Du dich ideal informieren für die beste Auswahl für dein Astrophot Abenteuer. 
             </p>
+        </article>
+        <article>
+        <div id="superzoom"></div>
         </article>
         <footer>
             <strong>Datenquellen:</strong>
