text zu superzoom bild

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             </p>
         </article>
         <article>
+            <h1>Entdecke die Schnönheit unserer Milchstraße im Superzoom Foto</h1>
+            <p>Das hier dargestellte Foto wurde im IDA Sternenpark WInklmoosalm aufgenommen. Es wurde als Mosaik aus 20 verschiedenen Fotos zusammengestellt, wodurch eine Auflösung von 128 Megapixeln erreicht wurde. 
+                
+            </p>
+        </article>
+        <article>
         <div id="superzoom"></div>
         </article>
         <footer>
