--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Leaflet -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" 
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 
     <!-- Leaflet Providers -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-providers/1.13.0/leaflet-providers.min.js" integrity="sha512-5EYsvqNbFZ8HX60keFbe56Wr0Mq5J1RrA0KdVcfGDhnjnzIRsDrT/S3cxdzpVN2NGxAB9omgqnlh4/06TvWCMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -29,9 +32,6 @@
     <!--Minimap-->
     <script src="https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@1.0.0/dist/Control.WorldMiniMap.js" integrity="sha512-PFw8St3qenU1/dmwCfiYYN/bRcqY1p3+sBATR+rZ6622eyXOk/8izVtlmm/k8qW7KbRIJsku838WCV5LMs6FCg==" crossorigin=""></script>
 
-    <!--Zomify-->
-    <script src="src/L.TileLayer.Zoomify.js"></script>
-   
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
@@ -65,15 +65,6 @@
                 Egal, ob du ein erfahrener Astrofotograf bist oder gerade erst in diese faszinierende Welt eintauchst, die Tiroler Alpen bieten dir die idealen Bedingungen, um dein Handwerk zu perfektionieren und unvergessliche Aufnahmen des Nachthimmels zu machen. Nutze diese einzigartige Gelegenheit, um die Wunder des Universums in einer der beeindruckendsten Bergregionen Europas zu erfassen und zu teilen. Tirol ist zweifellos ein Paradies für Astrofotografen!
             Wir geben Dir die Lichvermutzungskarte sowie Wetterdaten an die Hand damit Du dich ideal informieren für die beste Auswahl für dein Astrophot Abenteuer. 
             </p>
-        </article>
-        <article>
-            <h1>Entdecke die Schnönheit unserer Milchstraße im Superzoom Foto</h1>
-            <p>Das hier dargestellte Foto wurde im IDA Sternenpark WInklmoosalm aufgenommen. Es wurde als Mosaik aus 20 verschiedenen Fotos zusammengestellt, wodurch eine Auflösung von 128 Megapixeln erreicht wurde. 
-                
-            </p>
-        </article>
-        <article>
-        <div id="superzoom"></div>
         </article>
         <footer>
             <strong>Datenquellen:</strong>
