--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <!--Minimap-->
     <script src="https://cdn.jsdelivr.net/gh/maneoverland/leaflet.WorldMiniMap@1.0.0/dist/Control.WorldMiniMap.js" integrity="sha512-PFw8St3qenU1/dmwCfiYYN/bRcqY1p3+sBATR+rZ6622eyXOk/8izVtlmm/k8qW7KbRIJsku838WCV5LMs6FCg==" crossorigin=""></script>
 
-    <!--Zomify-->
-    <script src="src/L.TileLayer.Zoomify.js"></script>
+    <!--Leaflet Legend-->
+    <script src="src/leaflet.legend.js"></script>
+    <link href = "src/leaflet.legend.css", rel = "stylesheet"></link>
    
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
@@ -45,12 +46,12 @@
             <nav>
                 <i class="fab fa-github"></i> <a href="https://github.com/astrophotoTirol">Github</a>
             </nav>
+        </header>
         <article>
             <p>Willkommen bei Astrophoto Tirol, einem aufregenden Projekt, das es sich zum Ziel gesetzt hat, die faszinierende Schönheit des Nachthimmels in den atemberaubenden Tiroler Alpen zu enthüllen. Als leidenschaftliche Astrofotografen und Naturliebhaber sind wir von der beeindruckenden Pracht des Sternenhimmels und den unendlichen Möglichkeiten der Fotografie begeistert. In einer Welt, die von städtischen Lichtern und Hektik geprägt ist, möchten wir einen Rückzugsort schaffen, in dem die Schönheit der Nacht zum Vorschein kommt. Die Tiroler Alpen bieten eine ideale Umgebung für unser Projekt, da sie weit entfernt von den Lichtverschmutzungen der städtischen Gebiete liegen. Hier haben wir die Möglichkeit, den Nachthimmel in seiner vollen Pracht zu erleben und einzufangen. 
             Deswegen haben wir für euch unsere Liebligspots für Astrophotogaphie auf einer Karte dargestellt. Klicke einfach auf die Spots -> Wenn du nach mehr Infos suchst folge den jeweiligen Links. 
             </p>
         </article>
-        </header>
         <article>
             <div id="map"></div>
             <h1><a href=""></a>Unsere Lieblings Spots für Astrophotgraphie in Tirol</h1>
