--- a/index.html
+++ b/index.html
@@ -69,19 +69,23 @@
         </article>
         <article>
             <h1>Entdecke die Schnönheit unserer Milchstraße im Superzoom Foto</h1>
-            <p>Das hier dargestellte Foto wurde im IDA Sternenpark WInklmoosalm aufgenommen. Es wurde als Mosaik aus 20 verschiedenen Fotos zusammengestellt, wodurch eine Auflösung von 128 Megapixeln erreicht wurde. 
-                
+            <p>Das hier dargestellte Foto wurde im IDA Sternenpark Winklmoosalm aufgenommen. Es wurde als Mosaik aus 20 verschiedenen Fotos zusammengestellt, wodurch eine Auflösung von 128 Megapixeln erreicht wurde. 
+               Der grüne Schimmer im Foto ist nicht etwa Dunst, oder Lichtverschmutzung. Es handelt sich hierbei um sogenannten Airglow, ein zeichen für WIRKLICH dunken Himmel ,der nur selten photographisch festgehalten werden kann. Wer mehr darüber erfahren will und zwei Astrophotographen bei ihrer Arbeit begleiten möchte, kann sich das Video am Ende der Seite ansehen.
             </p>
         </article>
         <article>
         <div id="superzoom"></div>
         </article>
+        <article>
+        <h2>Hier das Video Über das Phänomen Alpenglühen</h2>
+        </article>
+        <iframe width="1202" height="720" src="https://www.youtube.com/embed/3E1TgsGoLlM" title="Airglow: Jagd nach dem Alpenleuchten | Gut zu wissen | BR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <footer>
             <strong>Datenquellen:</strong>
             <nav>
-                <a href="https://lawinen.report/">Lawinen.report</a> |
-                <a href="https://static.avalanche.report/weather_stations/stations.geojson">GeoJSON Daten</a> |
-                <a href="https://www.data.gv.at/katalog/de/dataset/land-tirol_wetterstationsdatentirol">Metadaten</a>
+                <a href=></a> |
+                <a href=></a> |
+                <a href=></a>
             </nav>
         </footer>
     </main>
