--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 
-<head>
+<head>                                                                                                              <!--Titel und Plugins-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,7 +41,7 @@
 
 <body>
     <main>
-        <header>
+        <header>                                                                                                    <!--Header Elemente-->
             <h2><i class="fa-solid fa-camera-retro"></i> Astro Photospots in Tirol</h2>
             <nav>
                 <i class="fab fa-github"></i> <a href="https://github.com/astrophotoTirol">Github</a>
@@ -52,8 +52,8 @@
             Deswegen haben wir für euch unsere Liebligspots für Astrophotogaphie auf einer Karte dargestellt. Klicke einfach auf die Spots -> Wenn du nach mehr Infos suchst folge den jeweiligen Links. 
             </p>
         </article>
-        <article>
-            <div id="map"></div>
+        <div id="map"></div>                                                                                        <!--Karte Übersicht-->
+        <article>                                                                                                   <!--Text-->
             <h1><a href=""></a>Unsere Lieblings Spots für Astrophotgraphie in Tirol</h1>
             <p>Tirol, mit seinen majestätischen Bergen und abgelegenen Gebieten, bietet aufgrund der geringen Lichtverschmutzung ideale Voraussetzungen für die faszinierende Welt der Astrophotografie. Die abgeschiedenen Bergregionen abseits der städtischen Lichter bieten klare und dunkle Nachthimmel, die perfekt für die Aufnahme von Sternen, Planeten, der Milchstraße und anderer Himmelsphänomene sind.
 
@@ -67,25 +67,29 @@
             Wir geben Dir die Lichvermutzungskarte sowie Wetterdaten an die Hand damit Du dich ideal informieren für die beste Auswahl für dein Astrophot Abenteuer. 
             </p>
         </article>
-        <article>
+        <article>                                                                                                   <!--Zwischenüberschrift-->
             <h1>Entdecke die Schnönheit unserer Milchstraße im Superzoom Foto</h1>
             <p>Das hier dargestellte Foto wurde im IDA Sternenpark Winklmoosalm aufgenommen. Es wurde als Mosaik aus 20 verschiedenen Fotos zusammengestellt, wodurch eine Auflösung von 128 Megapixeln erreicht wurde. 
                Der grüne Schimmer im Foto ist nicht etwa Dunst, oder Lichtverschmutzung. Es handelt sich hierbei um sogenannten Airglow, ein zeichen für WIRKLICH dunken Himmel ,der nur selten photographisch festgehalten werden kann. Wer mehr darüber erfahren will und zwei Astrophotographen bei ihrer Arbeit begleiten möchte, kann sich das Video am Ende der Seite ansehen.
             </p>
         </article>
         <article>
-        <div id="superzoom"></div>
+        <div id="superzoom"></div>                                                                                  <!--superzoom "Karte"-->
         </article>
         <article>
         <h2>Hier das Video Über das Phänomen Alpenglühen</h2>
         </article>
-        <iframe width="1202" height="720" src="https://www.youtube.com/embed/3E1TgsGoLlM" title="Airglow: Jagd nach dem Alpenleuchten | Gut zu wissen | BR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <footer>
+        <iframe width="1202" height="720" src="https://www.youtube.com/embed/3E1TgsGoLlM" 
+        title="Airglow: Jagd nach dem Alpenleuchten | Gut zu wissen | BR" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>
+        <footer>                                                                                                    <!--Datenquellen-->
             <strong>Datenquellen:</strong>
             <nav>
-                <a href=></a> |
-                <a href=></a> |
-                <a href=></a>
+                <a href="https://api.met.no/weatherapi/locationforecast/2.0">Met Norway</a> |
+                <a href="https://github.com/djlorenz/djlorenz.github.io/tree/master/astronomy">Lichtverschmutzungskarten</a> |
+                <a href="https://github.com/AstrophotoTirol/astrophototirol.github.io">(Astro)photos</a>
             </nav>
         </footer>
     </main>
